--- a/templates/youttify_auth/django_registration/registration_form.html
+++ b/templates/youttify_auth/django_registration/registration_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags main_extras static %}
 {% block css %}
-<link rel="stylesheet" href="{% static 'css/register.css' %}">
+<link rel="stylesheet" href="{% static 'css/youttify_auth/register.css' %}">
 {% endblock %}
 {% block content %}
 <section class="vh-100" style="background-color: #eee;">
